# comptest

./: .gitignore  Makefile  emulate-comptest.sh  pyproject.toml  testing.org
share/bash-completion/completions/: compget
src/python/comptest/: __init__.py  comptest.py
